# rust-test-stubber

./: .gitignore  Cargo.toml  result.rs
example/: example.rs
extension/: package-lock.json
extension/rust-test-stubber/: CHANGELOG.md  README.md  package-lock.json  package.json
extension/rust-test-stubber/src/: extension.ts
src/: ast.rs  cli.yml  main.rs
