[package]
name = "test-stub-gen"
version = "0.1.0"
authors = ["Konrad Kleczkowski"]
edition = "2018"
include = [ "/src/*", "Cargo.toml" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0.42"
features = ["parsing", "full"]

[dependencies.clap]
version = "2.33"
features = [ "yaml" ]